Copy the plugin's JS file to "plugins/js".

--- a/plugin.xml
+++ b/plugin.xml
@@ -6,7 +6,7 @@
 
 	<name>FacebookConnect</name>
 
-	<asset src="www/FacebookConnect.js" target="FacebookConnect.js" />
+	<asset src="www/plugins/js/FacebookConnect.js" target="/plugins/js/FacebookConnect.js" />
 
 	<!-- android -->
 	<platform name="android">
